# voxelcore

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: windows.yml
doc/en/: block-models.md  block-properties.md  particles.md  xml-ui-layouts.md
doc/en/scripting/: ui.md
doc/en/scripting/builtins/: libblock.md  libentities.md  libgfx-blockwraps.md  libplayer.md
doc/ru/: block-models.md  block-properties.md  particles.md  vcm.md  xml-ui-layouts.md
doc/ru/scripting/: ui.md
doc/ru/scripting/builtins/: libblock.md  libentities.md  libgfx-blockwraps.md  libplayer.md
doc/specs/: binary_json_spec.md
lib/: CMakeLists.txt  curl.cmake  entt.cmake  glew.cmake  glfw3.cmake  glm.cmake  gtest.cmake  libpng.cmake  libvorbis.cmake  luajit.cmake  openal-soft.cmake  opengl.cmake  zlib.cmake
res/: project.toml  resources.json
res/layouts/pages/: content.xml  content_menu.xml  main.xml  new_world.xml.lua  pause.xml  settings.xml  settings.xml.lua  settings_audio.xml.lua  settings_controls.xml.lua  settings_display.xml.lua  settings_graphics.xml.lua  settings_reset.xml.lua  worlds.xml  worlds.xml.lua
res/layouts/templates/: language.xml  track_setting.xml  world.xml
res/modules/: vector2.lua  vector3.lua
res/modules/internal/: gui_util.lua
res/scripts/: classes.lua  hud.lua  post_content.lua  stdlib.lua
res/scripts/components/: player.lua
res/shaders/effects/: ssao.glsl
src/: CMakeLists.txt  settings.hpp
src/audio/: audio.cpp  audio.hpp
src/audio/AL/: ALAudio.cpp
src/coders/: compression.cpp  compression.hpp  rle.cpp  rle.hpp  vcm.cpp  xml.cpp  xml.hpp
src/content/: ContentBuilder.cpp
src/content/loading/: BlockLoader.cpp
src/devtools/: DebuggingServer.cpp  Project.cpp  Project.hpp
src/engine/: Engine.cpp  Engine.hpp  EnginePaths.cpp  EnginePaths.hpp
src/frontend/: debug_panel.cpp  hud.cpp  hud.hpp
src/graphics/commons/: Model.cpp  Model.hpp
src/graphics/render/: BlockWrapsRenderer.cpp  BlockWrapsRenderer.hpp  BlocksRenderer.cpp  BlocksRenderer.hpp  ChunksRenderer.cpp  ChunksRenderer.hpp  DebugLinesRenderer.cpp  DebugLinesRenderer.hpp  Decorator.cpp  Emitter.cpp  HandsRenderer.cpp  MainBatch.cpp  MainBatch.hpp  PrecipitationRenderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp
src/graphics/ui/: GUI.cpp  GUI.hpp  gui_xml.cpp
src/graphics/ui/elements/: CheckBox.cpp  InventoryView.cpp  InventoryView.hpp  Panel.cpp  SelectBox.cpp  UINode.cpp  UINode.hpp
src/lighting/: Lightmap.cpp  Lightmap.hpp
src/logic/: BlocksController.cpp
src/logic/scripting/lua/: lua_engine.cpp
src/logic/scripting/lua/libs/: libapp.cpp  libblock.cpp  libblockwraps.cpp  libcore.cpp  libentity.cpp  libfile.cpp  libgui.cpp  libnetwork.cpp  libplayer.cpp  libposteffects.cpp  libworld.cpp
src/logic/scripting/lua/usertypes/: lua_type_voxelfragment.cpp
src/network/: Network.cpp
src/objects/: Player.cpp  Player.hpp  Players.cpp
src/presets/: ParticlesPreset.cpp  ParticlesPreset.hpp
src/util/: Clock.cpp  ObjectsPool.hpp  platform.cpp
src/voxels/: Block.cpp  Block.hpp  Chunks.cpp  Chunks.hpp  GlobalChunks.cpp  blocks_agent.cpp  blocks_agent.hpp  compressed_chunks.cpp
src/window/detail/: GLFWWindow.cpp
src/world/files/: RegionsLayer.cpp  WorldRegions.cpp  WorldRegions.hpp
src/world/generator/: VoxelFragment.cpp  VoxelFragment.hpp
test/coders/: rle.cpp
